test_programs/compile_failure/noirc_frontend_monomorphization_tests_mutually_recursive_types_error/src/main.nr

        fn main() {
            let _zero = Even::Zero;
        }

        enum Even {
            Zero,
            Succ(Odd),
        }

        enum Odd {
            One,
            Succ(Even),
        }
        